--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora Javascript</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&family=VT323&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <header>
+    <p>Poke Info</p>
+  </header>
 
-  
+  <main>
+    <ul class="poke-list">
+      <li class="pokemon"></li>
+    </ul>
+  </main>
+
   <script type="module" src="./js/script.js"></script>
 </body>
 
