adicionados elementos no html que receberam as informacoes dos pokemons. Criada a classe PokemonApi que recebe a url da api, elementos do html selecionados. Metodo getUrl criado para receber a id do pokemon e utilizar a  url da classe para fazer o fetch da api, recebendo os dados dos pokemons. Apos dados recebidos, objeto desestruturado e informacoes da api inseridas nos elementos html. Verificacao se o pokemon tem o segundo tipo e classe inserida no elemento html para esconder o elemento caso o pokemon nao tenha o segundo tipo.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora Javascript</title>
+  <title>Poke Info</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,18 @@
   </header>
 
   <main>
-    <ul class="poke-list">
-      <li class="pokemon"></li>
+    <ul class="poke-container">
+      <li class="poke-card">
+        <img class="poke-img" src="./" alt="">
+        <span class="poke-name"></span>
+        <span class="poke-hp"></span>
+        <span class="poke-attack"></span>
+        <span class="poke-defense"></span>
+        <span class="poke-type1"></span>
+        <span class="poke-type2"></span>
+      </li>
     </ul>
+
   </main>
 
   <script type="module" src="./js/script.js"></script>
