--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <span class="poke-defense"></span>
         <span class="poke-type1"></span>
         <span class="poke-type2"></span>
+        <div class="btn-container">
+          <button class="prev">Previous</button>
+          <button class="next">Next</button>
+        </div>
       </li>
     </ul>
 
