elementos adicionados e alterados do html para melhor posicionamento. estilos e posicionamento do card, containers, informacoes do pokemon e botoes.

--- a/index.html
+++ b/index.html
@@ -21,17 +21,24 @@
     <ul class="poke-container">
       <li class="poke-card">
         <img class="poke-img" src="./" alt="">
+
+
         <span class="poke-name"></span>
-        <span class="poke-hp"></span>
-        <span class="poke-attack"></span>
-        <span class="poke-defense"></span>
         <span class="poke-type1"></span>
         <span class="poke-type2"></span>
-        <div class="btn-container">
-          <button class="prev">Previous</button>
-          <button class="next">Next</button>
+
+
+        <div class="stats">
+          <span class="poke-hp"></span>
+          <span class="poke-attack"></span>
+          <span class="poke-defense"></span>
         </div>
+
       </li>
+      <div class="btn-container">
+        <button class="prev">Previous</button>
+        <button class="next">Next</button>
+      </div>
     </ul>
 
   </main>
