adicionado elemento html para receber imagem do pokemon de costas, alteracao no posicionamento do css para colocar as duas imagens no grid e selecionado o elemento dentro da classe para adicionar a imagem com o fetch da api.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <main>
     <ul class="poke-container">
       <li class="poke-card">
-        <img class="poke-img" src="./" alt="">
+        <img class="poke-img-front" src="./" alt="">
+        <img class="poke-img-back" src="./" alt="">
 
 
         <span class="poke-name"></span>
