adicionado html, css e responsivo da busca.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   </header>
 
   <main>
+    <div class="poke-search-container">
+      <input type="text" class="poke-search" placeholder="Search your pokemon">
+
+    </div>
     <ul class="poke-container">
       <li class="poke-card">
         <img class="poke-img-front" src="./" alt="">
