adicionada mensagem de erro quando o pokemon nao é encontrado.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <main>
     <div class="poke-search-container">
       <input type="text" class="poke-search" placeholder="Search your pokemon">
+      <span class="search-error">Something went wrong, please check the name and try again!</span>
 
     </div>
     <ul class="poke-container">
