corrido bug ao buscar sem valor no input

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <div class="poke-search-container">
       <input type="text" class="poke-search" placeholder="Search your pokemon">
-      <span class="search-error">Something went wrong, please check the name and try again!</span>
+      <span class="search-error">Sorry, this name or id does not exist.</span>
 
     </div>
     <ul class="poke-container">
