adicionado html e css do poke-storage. Botao selecionado, e evento ao click criado para inserir o uma nova li com a imagem do pokemon que esta na tela. inserido um dataset para armazenar o id do pokemon que esta sendo guardado para adicionar a li. Evento de clique criado para os pokemons que estao armazenados, acessando o id armazenado no dataset para chamar o pokemon na tela atraves do metodo getData.

--- a/index.html
+++ b/index.html
@@ -18,34 +18,43 @@
   </header>
 
   <main>
-    <div class="poke-search-container">
-      <input type="text" class="poke-search" placeholder="Search your pokemon">
-      <span class="search-error">Sorry, this name or id does not exist.</span>
+    <div class="main-container">
 
-    </div>
-    <ul class="poke-container">
-      <li class="poke-card">
-        <img class="poke-img-front" src="./" alt="">
-        <img class="poke-img-back" src="./" alt="">
-
-
-        <span class="poke-name"></span>
-        <span class="poke-type1"></span>
-        <span class="poke-type2"></span>
-
-
-        <div class="stats">
-          <span class="poke-hp"></span>
-          <span class="poke-attack"></span>
-          <span class="poke-defense"></span>
-        </div>
-
-      </li>
-      <div class="btn-container">
-        <button class="prev">Previous</button>
-        <button class="next">Next</button>
+      <div class="poke-search-container">
+        <input type="text" class="poke-search" placeholder="Search your pokemon">
+        <span class="search-error">Sorry, this name or id does not exist.</span>
       </div>
-    </ul>
+
+      <ul class="poke-storage-container">
+
+
+      </ul>
+
+      <ul class="poke-container">
+        <li class="poke-card">
+          <img class="poke-img-front" src="./" alt="">
+          <img class="poke-img-back" src="./" alt="">
+
+
+          <span class="poke-name"></span>
+          <span class="poke-type1"></span>
+          <span class="poke-type2"></span>
+
+
+          <div class="stats">
+            <span class="poke-hp"></span>
+            <span class="poke-attack"></span>
+            <span class="poke-defense"></span>
+          </div>
+
+        </li>
+        <div class="btn-container">
+          <button class="prev">Previous</button>
+          <button class="catch">Catch</button>
+          <button class="next">Next</button>
+        </div>
+      </ul>
+    </div>
 
   </main>
 
