alteracao em alguns nomes de metodos, estilos e posicionamento do alterados e corrigidos para melhor funcionamento. responsivo concluido.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
         <div class="btn-container">
           <button class="prev">Previous</button>
-          <button class="catch">Catch</button>
+          <button class="save">Save</button>
           <button class="next">Next</button>
         </div>
       </ul>
